--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>hnzlmnn</title>
+    <title><!-- @echo PAGETITLE --></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=1" />
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
@@ -72,7 +72,7 @@
       <ul class="menubackground menuitems">
         <li>
           <a class="logo" href="#/"></a>
-          <h3>Malte Heinzelmann</h3>
+          <h3><!-- @echo MENUTITLE --></h3>
         </li>
         <li>
           <ul class="links">
@@ -120,7 +120,7 @@
           </button>
           <div class="navbar-brand">
             <a class="logo small" href="#/"></a>
-            <font>Malte Heinzelmann</font>
+            <font><!-- @echo MENUTITLE --></font>
           </div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
